disable webkit transform translate 3d to see if it fixes invisible accordion on phone

--- a/vufind/web/interface/themes/responsive/css/main.css
+++ b/vufind/web/interface/themes/responsive/css/main.css
@@ -6233,7 +6233,7 @@ a.badge:focus {
 @media (max-width: 480px) {
 
   .nav-collapse {
-    -webkit-transform: translate3d(0, 0, 0);
+  /*-webkit-transform: translate3d(0, 0, 0);*/
   }
   .page-header h1 small {
     display: block;
